[package]
name = "zeta9"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
io = "0.0.2"
reqwest = { version = "0.13.2", default-features = false, features = ["default-tls"] }
stun = "0.17.1"
stun-client = "0.1.4"
stun-rs = "0.1.11"
stun_codec = "0.4.0"
stunclient = "0.4.2"
tokio = { version = "1.49.0", features = ["full"] }
